--- a/src/prog2/vista/FrmGestioComponentsCentral.form
+++ b/src/prog2/vista/FrmGestioComponentsCentral.form
@@ -54,6 +54,7 @@
               <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-13441720"/>
               <text value="Barres de Control"/>
             </properties>
           </component>
@@ -104,6 +105,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1753279"/>
               <text value="Desactivar"/>
             </properties>
           </component>
@@ -112,6 +114,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-13441720"/>
               <text value="Activar"/>
             </properties>
           </component>
@@ -138,6 +141,7 @@
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-13441720"/>
               <text value="Activar"/>
             </properties>
           </component>
@@ -146,6 +150,7 @@
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground color="-1753279"/>
               <text value="Desactivar"/>
             </properties>
           </component>
